# altel_acts_taichu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
0808/: geo_setup2_align3_0p04.json
INSTALL/: 1.root  output.root
INSTALL/cmake/: altel_actsConfig.cmake  altel_actsTargets-release.cmake  altel_actsTargets.cmake  eudaqConfig.cmake  eudaqConfigVersion.cmake  eudaqTargets-relwithdebinfo.cmake  eudaqTargets.cmake
INSTALL/include/: Frontend.hh  TelEventTTreeReader.hpp  TelEventTTreeWriter.hpp  TelGL.hh
INSTALL/include/Acts/: ActsVersion.hpp
INSTALL/include/Acts/TrackFitting/: GainMatrixSmoother.hpp
INSTALL/include/eudaq/: Config.hh
cmake/: ActsExamples.cmake  Config.cmake.in
doc/: job.sh
source/: CMakeLists.txt
source/backup/doc/: job.sh
source/backup/exe/: CMakeLists.txt  EstimateTrackParameters.cpp
source/backup/lib/: CMakeLists.txt
source/backup/lib/include/: PixelMultiTrajectory.hpp  PixelSourceLink.hpp  RootTelescopeTrackWriter.hpp  StraightLinePropagator.hpp  TelescopeFittingAlgorithm.hpp  TelescopeJsonTrackReader.hpp  TelescopeJsonTrackWriter.hpp  TelescopeSeedingAlgorithm.hpp  TelescopeTrack.hpp
source/backup/lib/src/: RootTelescopeTrackWriter.cpp  TelescopeAlignmentAlgorithmAlignmentFunction.cpp  TelescopeJsonTrackWriter.cpp  TelescopeTrackFindingAlgorithm.cpp  TelescopeTrackingPerformanceWriter.cpp
source/common/: CMakeLists.txt
source/common/rapidjson/: myrapidjson.h
source/exe/: .TelKinkAngle.cpp.swp  AlignTelescopeGeometry.cpp  AlignTelescopeTracks.cpp  CMakeLists.txt  EstimateTrackParameters.cpp  FindTelescopeSeeds.cpp  FindTelescopeTracks.cpp  FitTelescopeTracks.cpp  MakeGeometryJson.cpp  MilleAlign.cpp  PrintEventJson.cpp  RecTelescopeCKFTracks.cpp  RecTelescopeTracks.cpp  TelDetectorResidual.cpp  TelKinkAngle.cpp  TelTrackFind.cpp  TelTrackResidual.cpp  TrackParametersEstimator.cpp  altelActsTracking.cpp  altelConvert.cpp  altelConvert2josn.cpp  altelDataTaking.cpp  altelEudaqRawViewer.cpp  altelMilleAlign.cpp  altelTTreeExampleReader.C  altelTTreeExampleReader.cxx  altelTTree_MaskMaker.C  altelTcpClient.cpp  altelTelEventViewer.cpp  glfw_test.hh  test.cc
source/exenew/: CMakeLists.txt  TelAlign.cpp  TelTrackFind.cpp
source/lib/: CMakeLists.txt
source/lib/include/: Alignment.hpp  BuildTelescopeDetector.hpp  JsonGenerator.hpp  ObjTelescopeTrackWriter.hpp  PixelMultiTrajectory.hpp  PixelSourceLink.hpp  RootTelescopeTrackWriter.hpp  StraightLinePropagator.hpp  TelActs.hh  TelDataDef.hpp  TelElement.hpp  TelEvent.hpp  TelEventTTreeWriter.hpp  TelMultiTrajectory.hpp  TelSourceLink.hpp  TelescopeAlignmentAlgorithm.hpp  TelescopeAlignmentDecorator.hpp  TelescopeDetector.hpp  TelescopeDetectorElement.hpp  TelescopeFittingAlgorithm.hpp  TelescopeJsonTrackReader.hpp  TelescopeJsonTrackWriter.hpp  TelescopeSeedingAlgorithm.hpp  TelescopeTrack.hpp  TelescopeTrackFindingAlgorithm.hpp  TelescopeTrackReader.hpp  TelescopeTrackingPerformanceWriter.hpp  edm.txt
source/lib/src/: ObjTelescopeTrackWriter.cpp  RootTelescopeTrackWriter.cpp  TelActs.cpp  TelAlignment.cpp  TelElement.cpp  TelEventTTreeWriter.cpp  TelMultiTrajectory.cpp  TelSourceLink.cpp  TelTracking.cc  TelescopeAlignmentAlgorithm.cpp  TelescopeAlignmentAlgorithmAlignmentFunction.cpp  TelescopeAlignmentDecorator.cpp  TelescopeBuildGeometry.cpp  TelescopeDetector.cpp  TelescopeFittingAlgorithm.cpp  TelescopeFittingAlgorithmFitterFunction.cpp  TelescopeJsonTrackReader.cpp  TelescopeJsonTrackWriter.cpp  TelescopeTrackFindingAlgorithm.cpp  TelescopeTrackFindingAlgorithmFindTracksFunction.cpp  TelescopeTrackReader.cpp  TelescopeTrackingPerformanceWriter.cpp
source/libnew/: CMakeLists.txt
source/libnew/include/: PixelMultiTrajectory.hpp  PixelSourceLink.hpp  TelActs.hh  TelElement.hpp  TelMultiTrajectory.hpp  TelSourceLink.hpp  TelescopeDetectorElement.hpp
source/libnew/src/: TelActs.cc  TelSoureLink.cpp
source/telacts/: CMakeLists.txt
source/telacts/include/: StraightLinePropagator.hpp  TelActs.hh  TelElement.hpp  TelSourceLink.hpp
source/telacts/src/: TelActs.cpp  TelElement.cpp  TelMultiTrajectory.cpp  TelSourceLink.cpp
source/teldaq/: CMakeLists.txt
source/teldaq/eudaq/: CMakeLists.txt
source/teldaq/eudaq/exe/: .ConverterEudaqAltel2Json.cc.swp  CMakeLists.txt  ConverterEudaqAltel2Json.cc  oldEudaqRaw2NewEudaqRaw.cxx
source/teldaq/eudaq/misc/: aida_tlu_connection.xml  eudaq_altel_tlu.conf  eudaq_altel_tlu.ini  eudaq_altel_tlu.sh
source/teldaq/include/: Telescope.hh
source/teldaq/rbcp/: CMakeLists.txt
source/teldaq/rbcp/include/: ClusterPool.hh  DataFrame.hh  Layer.hh  Telescope.hh
source/teldaq/rbcp/misc/: CMakeLists.txt  altel_run_conf.json
source/teldaq/rbcp/src/: AltelReader.cc  ClusterPool.cc  DataFrame.cc  Layer.cc  TcpConnection.cc  Telescope.cc
source/teldaq/resource/: taichu_layer_conf.json  taichu_tel_conf.json
source/teldaq/src/: Telescope.cc
source/teldata/: CMakeLists.txt
source/teldata/eudaq/: CMakeLists.txt
source/teldata/eudaq/include/: CvtEudaqAltelRaw.hh
source/teldata/eudaq/src/: CvtEudaqAltelRaw.cc
source/teldata/event/: CMakeLists.txt
source/teldata/event/include/: FEI4Helper.hh  TelEvent.hpp
source/teldata/json/: TelEvent_tmp.js
source/teldata/root/: CMakeLists.txt
source/teldata/root/include/: TelEventTTreeReader.hpp  TelEventTTreeWriter.hpp
source/teldata/root/macro/: rootlogon.C
source/teldata/root/src/: TelEventTTreeReader.cpp  TelEventTTreeWriter.cpp
source/telfe/: CMakeLists.txt
source/telfe/exe/: CMakeLists.txt  ConfigDAQtool.cc  rbcptool.cc  tcpcontool.cc
source/telfe/include/: DataPack.hh  Frontend.hh
source/telfe/resource/: firmware_reg.json  taichu_layer_conf.json
source/telfe/src/: DataPack.cc  Frontend.cc
source/telgl/: CMakeLists.txt
source/telgl/telfw/: CMakeLists.txt
source/telgl/telgl/: CMakeLists.txt
source/telmille/: CMakeLists.txt
source/telmille/exe/: CMakeLists.txt  GeometryFileUpdate_main.cpp  LineFit_main.cpp  TelMille_main.cpp
source/telmille/include/: TelMille.hh  exampleUtil.h
source/telmille/src/: TelMille.cc  exampleUtil.cpp
(+5 files in other folders)
